[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Jan Foksinski", email = "jasfoksinski@gmail.com"},
]
dependencies = [
    "pygame>=2.5.0",
    "pyinstaller>=5.11.0",
    "pytmx>=3.32",
    "pytweening>=1.0.7",
]
requires-python = ">=3.11,<3.12"
readme = "README.md"
license = {text = "MIT"}

